<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageButtonStart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/record" />

    <ImageView
        android:id="@+id/imageButtonNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonStart"
        app:srcCompat="@drawable/next_enabled" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:paddingLeft="20dp"
        android:text="@string/imageButtonStart"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonStart"
        app:layout_constraintStart_toEndOf="@+id/imageButtonStart"
        app:layout_constraintTop_toTopOf="@+id/imageButtonStart"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:paddingLeft="20dp"
        android:text="@string/imageButtonNext"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonNext"
        app:layout_constraintStart_toEndOf="@+id/imageButtonNext"
        app:layout_constraintTop_toTopOf="@+id/imageButtonNext"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:paddingLeft="20dp"
        android:text="@string/imageButtonPlay"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:paddingLeft="20dp"
        android:text="@string/imageButtonSpeaker"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:text="@string/exercise2Desc"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonNext"
        app:srcCompat="@drawable/play_button_enabled" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/speaker" />

    <ImageView
        android:id="@+id/imageButtonPrevious"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/previous_enabled"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:text="@string/imageButtonPrevious"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonPrevious"
        app:layout_constraintStart_toEndOf="@+id/imageButtonPrevious"
        app:layout_constraintTop_toTopOf="@+id/imageButtonPrevious"
        app:layout_constraintVertical_bias="0.416" />

</androidx.constraintlayout.widget.ConstraintLayout>